# wakawaka

./: .clang-format  .gitignore  CMakeLists.txt  TC-mingw.cmake
.github/workflows/: cmake.yml
assets/: font.xcf  ghost.xcf  map  map_points  player.xcf
src/: colors.h  common.h  config.h  init.c  init.h  input.c  input.h  main.c  main.h  map.c  map.h  render.c  render.h  stage.c  stage.h  text.c  text.h  types.h  util.c  util.h
src/ghost/: blinky.c  ghost.c  ghost.h  pinky.c
src/ghosts/: blinky.c  ghosts.h  pinky.c
